--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="title_activity_reporte">ReporteActivity</string>
+    <string name="title_activity_vehiculos">VehiculosActivity</string>
 </resources>
